aligned navigation with rest of content Added image in companies fixed features image text box

--- a/css/custom.css
+++ b/css/custom.css
@@ -62,7 +62,7 @@ main {
         Navigation styling 
 ******************************************/
 
-.top-bar, .top-bar-left, .top-bar ul, .title-bar, .dropdown.menu, .submenu {
+.top-bar, .top-bar-left, .top-bar ul, .title-bar, .dropdown.menu, .submenu, #nav-bg {
     background: #182430;
 
 }
@@ -196,12 +196,14 @@ ul a:hover {
     background: #182430;
     display: flex;
 }
+.featured-bg { background: #182430;}
 
 
 .featured-image h1, .featured-image h2, .featured-image p {
     color: #fff;
 }
 
+/* A class to center text box on featured image */
 .vertical-centering {
     align-items: center;
     justify-content: center;
@@ -210,7 +212,7 @@ ul a:hover {
     background: rgba(16, 23, 31, 0.3)
 }
 
-/* the pink line over headline */
+/* The pink line over headline */
 .vertical-centering h1:before {
     content: "";
     display: block;
@@ -221,7 +223,6 @@ ul a:hover {
 }
 
 #front-section {
-/*    background-image: url(../img/boy_new_overlay.png);*/
     background-image: url(../img/kidddd.png);
     background-repeat: no-repeat;
     background-color: #182430; /* dark navy */
@@ -232,9 +233,9 @@ ul a:hover {
     display: flex;
 }
 
-@media(max-width: 360px) {
+@media(max-width: 361px) {
     #front-section {
-        background-position: -35vw -2vh;
+        background-position: -40vw -2vh;
     }
 }
 
@@ -244,7 +245,7 @@ ul a:hover {
 
 #second-section, #third-section, #fourth-section, #page-footer {
     padding: 3rem 0;  
-     color: #fff;
+    color: #fff;
 }
 
 #second-section {
@@ -329,9 +330,9 @@ img {
     background-size: auto 100%;
 }
 
-@media (min-width:1280px){
+@media (max-width:980px){
     #sponsors-featured {
-        background-position: -10vw top;
+        background-position: -30vw top;
     }
 }
 /*********** FOOTER STYLES *********************/
